WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281971
WebAutomationSession: fix isPaired not defined if ENABLE(REMOTE_INSPECTOR) is false
https://bugs.webkit.org/show_bug.cgi?id=281971
Summary
WebAutomationSession: fix isPaired not defined if ENABLE(REMOTE_INSPECTOR) is...
Thomas Devoogdt
Reported
2024-10-23 05:47:48 PDT
See
https://github.com/WebKit/WebKit/commit/79271e75c2fec165d6badfa191b6b9a6edeee611#diff-8bd8c79ff233a5f127fcdeeb7bb3abc7dcb8d0ca2d2c828130197d10e3f53302L375-R389
.
Attachments
Add attachment
proposed patch, testcase, etc.
Thomas Devoogdt
Comment 1
2024-10-23 05:54:44 PDT
Fix:
https://github.com/WebKit/WebKit/pull/35627
.
EWS
Comment 2
2024-10-23 08:44:15 PDT
Committed
285604@main
(2d82bf228840): <
https://commits.webkit.org/285604@main
> Reviewed commits have been landed. Closing PR #35627 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug