Cherry-pick 285604@main (2d82bf228840). https://bugs.webkit.org/show_bug.cgi?id=281971

WebAutomationSession.cpp: fix compilation if REMOTE_INSPECTOR is not used
    https://bugs.webkit.org/show_bug.cgi?id=281971

    Reviewed by Michael Catanzaro.

    isPaired() is not defined if REMOTE_INSPECTOR is not used

    Canonical link: https://commits.webkit.org/285604@main

Canonical link: https://commits.webkit.org/282416.235@webkitglib/2.46